# homework

./: .gitignore
deeplearning/hw1/Homework1_partA/: homework1.tex
deeplearning/hw1/Homework1_partB/: assignment1.md  features.ipynb  knn.ipynb  perceptron.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb
deeplearning/hw1/pdf/: README.md  features.html  knn.html  softmax.html  svm.html  two_layer_net.html
deeplearning/hw2/__MACOSX/hw2/: ._README.md
deeplearning/hw2/hw2/: README.md
deeplearning/hw2/hw2/Homework2_PartA/: main2.tex
deeplearning/hw2/hw2/Homework2_PartB/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb  PyTorch.ipynb  assignment2.md
deeplearning/hw3/Assignment3/Part_A_Writing/: main.tex
slam/hw1_icp/implementation/: CMakeLists.txt  icp.hpp  main.cpp
slam/hw1_icp/material/hw1_data/: data.txt  data_noisy.txt
slam/hw2_posegragh/material/CS284_hw2_data/: T_everytwo.txt
slam/hw2_posegragh/posegraph_ws/: evaluate.py  result_before.g2o  result_loop_after_add_constraints.g2o
slam/hw2_posegragh/posegraph_ws/output/: gt.txt  result_after.g2o  result_loop_before_add_constraints.g2o  trajectory_dead_reckoning.txt  trajectory_loop_closure.txt  trajectory_more_constraints.txt
slam/hw3_calibration/code/: calibration.cpp
slam/hw3_calibration/material/CS284_hw3_data/: img3.txt  out
slam/hw4_BA/RunzeYuan/code/: BA.py
slam/hw4_BA/code/: BA.py
slam/hw5_TSDF/: TSDF.py
slam/hw5_TSDF/CS284_hw5_data/pose/: bottom.txt  surround01.txt  surround02.txt  surround03.txt  surround04.txt  surround05.txt  (+8 more)
(+40 files in other folders)
